libs/extractor/tests/snapshots/all_tests__import_wrong_component.snap
---
source: libs/extractor/tests/all_tests.rs
expression: "ToBTreeSet::from(extract(\"test.tsx\",\nr#\"import {W} from '@devup-ui/core'\n        \"#, ExtractOption\n{\n    package: \"@devup-ui/core\".to_string(), css_dir:\n    \"@devup-ui/core\".to_string(), single_css: true, import_main_css: false,\n    import_aliases: HashMap::new()\n}).unwrap())"
---
ToBTreeSet {
    styles: {},
    code: "import { W } from \"@devup-ui/core\";\n",
}
